Name:                Snowbot
Version:             0.1
Synopsis:            Bot for #snowdrift
License:             GPL-3
License-file:        LICENSE
Author:              David L. L. Thomas
Maintainer:          davidleothomas@gmail.com
Copyright:           &copy; 2013 Snowdrift.coop
Category:            Network
Build-type:          Simple
Cabal-version:       >=1.2


Executable Snowbot
  Main-is:             Main.hs
  
  Build-depends: base
               , containers     < 1.0
               , text           < 1.0
               , bytestring
               , time           < 2.0
               , mtl            < 3.0
               , irc            >= 0.5 && < 1.0
               , ircbot         >= 0.5 && < 1.0
               , acid-state     < 1.0
               , safecopy       < 1.0


