name:                snowbot
version:             0.1
synopsis:            Bot for the #snowdrift IRC channel on Freenode
license:             AGPL-3
license-file:        LICENSE
author:              David L. L. Thomas
maintainer:          dev@lists.snowdrift.coop
copyright:           Copyright (c) 2013-2015 Snowdrift.coop
category:            Network
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  LICENSE
  README.md

executable snowbot
  default-language:    Haskell2010
  hs-source-dirs:      src/
  ghc-options:         -Wall
  main-is:             Main.hs
  build-depends:
      acid-state
    , base ==4.*
    , bytestring                               
    , containers
    , irc >=0.6
    , ircbot >=0.6
    , mtl
    , safecopy
    , text
    , time

